fix: updated mutation button text color for better contrast in dark mode

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ textarea.category-input {
 
 #mutation-buttons button span,
 #mutation-buttons button p {
-    color: darkgray;
+    color: #eaeaea;
     mix-blend-mode: difference;
 }
 
